Resolve warnings/suggestions throughout `MessageControllerTest`